# computer-graphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLFW3.cmake  FindGLM.cmake  FindSOIL.cmake  Findbenchmark.cmake
flip-demo/: CMakeLists.txt
flip-demo/resources/shaders/: shader_blur_vertical.frag  shader_none.vert
flip-demo/src/: main.cpp
fluid-benchmarks/: CMakeLists.txt
fluid-benchmarks/src/: main.cpp
fluid-demo/: CMakeLists.txt
fluid-demo/resources/shaders/: blur_horizontal.frag  coloured_vertex.frag  coloured_vertex.vert
fluid-demo/src/: main.cpp
mk-cuda/: CMakeLists.txt
mk-cuda/src/cuda/: DeviceCaps.cpp  DeviceCaps.h  DeviceMemory.cpp  DeviceMemory.hpp  FFTSolver.cpp  FFTSolver.h  FFTSolver.hpp
mk-demofw/: CMakeLists.txt
mk-demofw/src/demofw/: IKeyboardProvider.hpp  IMouseProvider.hpp  IntervalTimer.cpp  IntervalTimer.hpp
mk-demofw/src/demofw/glfw/: BaseDemoApp.cpp  BaseDemoApp.hpp  KeyboardProvider.cpp  KeyboardProvider.hpp  MouseProvider.cpp  MouseProvider.hpp
mk-gpgpu/: CMakeLists.txt
mk-gpgpu/src/gpgpu/gl/: DeviceMemory.cpp  DeviceMemory.hpp  FFTSolver.cpp  FFTSolver.hpp
mk-gpgpu/src/gpgpu/gl/GLFFT/: LICENSE  glfft.cpp  glfft.hpp  glfft_gl_api_headers.hpp  glfft_wisdom.cpp
mk-gpgpu/src/gpgpu/gl/GLFFT/glsl/: fft_common.inc  fft_main.inc  fft_radix16.inc  fft_radix4.inc  fft_radix64.inc  fft_radix8.inc  fft_shared.inc
mk-math/: CMakeLists.txt
mk-math/src/math/: Utils.hpp
mk-physics/: CMakeLists.txt
mk-physics/src/glsl/: ocean_calculate_spectrum.comp  ocean_update_mesh.comp  ocean_update_normals.comp
mk-physics/src/physics/fluids/: FLIPSolver2D.cpp  FLIPSolver2D.hpp
mk-physics/src/physics/ocean/: Ocean.cpp
mk-physics/src/physics/waves/: Ocean.cpp  Ocean.h  Ocean.hpp
mk-physics/src/physics/waves/cuda/: Ocean.cu  Ocean_cu.h  Ocean_cu.hpp
mk-physics/src/physics/waves/gl/: ocean_calculate_spectrum.comp  ocean_update_mesh.comp  ocean_update_normals.comp
mk-physics/src/physics/waves/glsl/: ocean_calculate_spectrum.comp  ocean_update_mesh.comp  ocean_update_normals.comp
mk-renderer/: CMakeLists.txt
mk-renderer/src/assets/: ResourceLoader.cpp  ResourceLoader.hpp
mk-renderer/src/core/: CoreTypes.h  VertexTypes.h  VertexTypes.hpp
mk-renderer/src/gl/: Fbo.cpp  Fbo.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Vao.cpp  Vao.hpp
mk-renderer/src/glsl/: skybox_env_map_default.frag  skybox_env_map_default.vert
mk-renderer/src/image/: EnvironmentMap.cpp  EnvironmentMap.hpp  Image.cpp  Image.hpp  Texture.cpp  Texture.hpp
mk-renderer/src/input/: IKeyboardProvider.h  IMouseProvider.h  MouseFilters.cpp  MouseFilters.h
mk-renderer/src/input/glfw/: KeyboardProvider.cpp  KeyboardProvider.h  MouseProvider.cpp  MouseProvider.h
mk-renderer/src/math/: IFFTSolver.h  IFFTSolver.hpp  Utils.cpp  Utils.hpp
mk-renderer/src/mesh/: Quad.cpp  Quad.hpp  RectPatch.cpp  RectPatch.h  RectPatch.hpp  RectVolume.cpp  RectVolume.h  RectVolume.hpp
mk-renderer/src/renderer/: Image.cpp  Image.hpp  VertexTypes.hpp
mk-renderer/src/renderer/assets/: ResourceLoader.cpp  ResourceLoader.hpp
mk-renderer/src/renderer/gl/: CubeMap.cpp  CubeMap.hpp  Fbo.cpp  Fbo.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Vao.cpp  Vao.hpp
mk-renderer/src/renderer/mesh/: Quad.cpp  Quad.hpp  RectPatch.cpp  RectPatch.hpp  RectVolume.cpp  RectVolume.hpp
mk-renderer/src/renderer/scene/: Camera.cpp  Camera.hpp  Skybox.cpp  Skybox.hpp
mk-renderer/src/scene/: Camera.cpp  Camera.h  Camera.hpp  Skybox.cpp  Skybox.h  Skybox.hpp
mk-renderer/src/utils/: IntervalTimer.cpp  IntervalTimer.h
ocean-demo/: CMakeLists.txt
ocean-demo/resources/shaders/: ocean.frag  ocean.vert  skybox.frag  skybox_env.frag  skybox_env.vert
ocean-demo/src/: main.cpp
